[tool.poetry]
name = "aws-test1"
version = "0.1.0"
description = ""
authors = ["Nathan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.35.78"
ipykernel = "^6.29.5"
openai = "^1.57.4"
botocore = "^1.35.83"
ollama = "^0.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
